--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .vs
 
+# I am Mac User :(
+.DS_Store
+
 # Quelle: https://github.com/github/gitignore/blob/main/Godot.gitignore
 # Godot-specific ignores
 .import/
@@ -12,3 +15,4 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+mono_crash*.json
