Add Timer and Signal to Scenario1
Also in this commit the pre-commit yaml is adjusted to work properly
with the resharper profiles.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: resharper
         name: resharper
-        entry: "dotnet jb cleanupcode src/Soteria.sln"
+        entry: dotnet jb cleanupcode src/Soteria.sln -s="src/Soteria.sln.DotSettings" -s="src/Soteria.sln.DotSettings.user" -s="src/rules/StyleCop.dotSettings" -s="src/rules/Team.DotSettings" --verbosity=WARN
         language: system
         pass_filenames: false
         types: [c#]
